<resources>
    <string name="app_name">420 Singles</string>

    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="zipcode_hint">Zipcode</string>
    <string name="action_settings"></string>
    <string name="dob_hint">Date of Birth</string>
    <string name="base_address">http://104.236.150.41/api/v1/</string>
    <string name="prefsFile">com.420Singles.preferences</string>
    <string name="facebook_app_id">687771387915564</string>
    <string name="noSuggestionsText">There are no matches right now, check back soon!</string>

    <string name="gender_hint">Gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
