<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/person_icon"/>

        <EditText
            android:id="@+id/first_name"
            style="@style/EditTextStyle"
            android:hint="@string/first_name_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/person_icon"/>

        <EditText
            android:id="@+id/last_name"
            style="@style/EditTextStyle"
            android:hint="@string/last_name_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/zip_icon"/>

        <EditText
            android:id="@+id/zipcode"
            style="@style/EditTextStyle"
            android:hint="@string/zipcode_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/person_icon"/>

        <Spinner
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:entries="@array/gender"
            android:prompt="@string/gender_hint"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/calendar_icon"/>

        <EditText
            android:id="@+id/dob"
            style="@style/EditTextStyle"
            android:hint="@string/dob_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/email_icon"/>

        <EditText
            android:id="@+id/email_address"
            style="@style/EditTextStyle"
            android:hint="@string/email_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/key_icon"/>

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:hint="@string/password_hint"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/key_icon"/>

        <EditText
            android:id="@+id/confirm_password"
            style="@style/EditTextStyle"
            android:hint="@string/confirm_password_hint"
            android:inputType="text"/>
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="JOIN"
        style="@style/ButtonStyle"
        android:onClick="signupButtonPressed"/>
</LinearLayout>